@@ -19,68 +19,6 @@
 
 include "subrule.inc";
 
-# Aputaulukko funktiolle luku_sijasta
-define @luku_sijasta_muunnostaulu :=
-[nimentö:     yksikkö,
- nimentö_t:   monikko,
- nimentö_tkA: monikko,
- omanto_n:    yksikkö,
- omanto_nkA:  yksikkö,
- omanto_ien:  monikko,
- omanto_jen:  monikko,
- omanto_en:   monikko,
- omanto_in:   monikko,
- omanto_ten:  monikko,
- omanto_iT:   monikko,
- omanto_idän: monikko,
- kohdanto_idät: monikko,
- kohdanto_t: monikko,
- osanto_A:    yksikkö,
- osanto_AA:   yksikkö,
- osanto_iA:   monikko,
- osanto_jA:   monikko,
- osanto_ttA:  yksikkö,
- osanto_itA:  monikko,
- osanto_tA:   yksikkö,
- olento_nA:   yksikkö,
- olento_inA:  monikko,
- tulento_ksi: yksikkö,
- tulento_iksi: monikko,
- sisäolento_ssA: yksikkö,
- sisäolento_issA: monikko,
- sisäolento_nA: yksikkö,
- sisäeronto_stA: yksikkö,
- sisäeronto_istA: monikko,
- sisäeronto_tA: yksikkö,
- sisätulento_Vn: yksikkö,
- sisätulento_VVn: yksikkö,
- sisätulento_hVn: yksikkö,
- sisätulento_iin: monikko,
- sisätulento_ihin: monikko,
- sisätulento_seen: yksikkö,
- sisätulento_isiin: monikko,
- sisätulento_sen: yksikkö,
- sisätulento_isin: monikko,
- sisätulento_nne: monikko,
- ulko_olento_llA: yksikkö,
- ulko_olento_illA: monikko,
- ulkoeronto_ltA: yksikkö,
- ulkoeronto_iltA: monikko,
- ulkotulento_lle: yksikkö,
- ulkotulento_ille: monikko,
- vajanto_ttA: yksikkö,
- vajanto_ittA: monikko,
- seuranto_ine: monikko,
- keinonto_n: yksikkö,
- keinonto_in: monikko,
- tulento_s: yksikkö
-];
-
-# Palauttaa annettua sijasymbolia vastaavan luvun
-subrule luku_sijasta($sija):
-  return @luku_sijasta_muunnostaulu.$sija;
-end;
-
 # Palauttaa annetusta tietueesta johdoksissa tarvittavat lähtötiedot
 subrule johdoksen_lähtötiedot($tietue):
   if (switch (malli) = voikko) then
