@@ -1,3 +1,7 @@
+2007-02-16 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add replacement b <-> h to OCR suggestions
+
 2007-02-14 Harri Pitkänen <hatapitk@iki.fi>
 
 	* New command line option -x for voikkospell, from a slightly
